--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
 	<script src="Extensions/3D/HemisphereLight.js" crossorigin="anonymous"></script>
 	<script src="code0.js" crossorigin="anonymous"></script>
 	<script src="code1.js" crossorigin="anonymous"></script>
+	<script src="code2.js" crossorigin="anonymous"></script>
 	<script src="data.js" crossorigin="anonymous"></script>
 
 
