--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 	<script src="gdjs-evtsext__authorizedplatformsvalidation__checkexecution-func.js" crossorigin="anonymous"></script>
 	<script src="gdjs-evtsext__authorizedplatformsvalidation__currentrefferer-func.js" crossorigin="anonymous"></script>
 	<script src="gdjs-evtsext__authorizedplatformsvalidation__includes-func.js" crossorigin="anonymous"></script>
+	<script src="gdjs-evtsext__buttonstates__buttonfsm.js" crossorigin="anonymous"></script>
 	<script src="gdjs-evtsext__gamepads__a_advanced_vibration_controller-func.js" crossorigin="anonymous"></script>
 	<script src="gdjs-evtsext__gamepads__a_change_vibration_magnitude-func.js" crossorigin="anonymous"></script>
 	<script src="gdjs-evtsext__gamepads__a_set_deadzone-func.js" crossorigin="anonymous"></script>
@@ -158,6 +159,7 @@
 	<script src="gdjs-evtsext__urltools__removeurlquerystringparameter-func.js" crossorigin="anonymous"></script>
 	<script src="gdjs-evtsext__urltools__urlattribute-func.js" crossorigin="anonymous"></script>
 	<script src="gdjs-evtsext__urltools__urlquerystringparameter-func.js" crossorigin="anonymous"></script>
+	<script src="Extensions/DeviceVibration/devicevibrationtools.js" crossorigin="anonymous"></script>
 	<script src="Extensions/Firebase/A_firebasejs/A_firebase-base.js" crossorigin="anonymous"></script>
 	<script src="Extensions/Firebase/A_firebasejs/B_firebase-firestore.js" crossorigin="anonymous"></script>
 	<script src="Extensions/Firebase/B_firebasetools/C_firebasetools.js" crossorigin="anonymous"></script>
