--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 	<script src="gdjs-evtsext__authorizedplatformsvalidation__checkexecution-func.js" crossorigin="anonymous"></script>
 	<script src="gdjs-evtsext__authorizedplatformsvalidation__currentrefferer-func.js" crossorigin="anonymous"></script>
 	<script src="gdjs-evtsext__authorizedplatformsvalidation__includes-func.js" crossorigin="anonymous"></script>
+	<script src="gdjs-evtsext__buttonstates__buttonfsm.js" crossorigin="anonymous"></script>
 	<script src="gdjs-evtsext__gamepads__a_advanced_vibration_controller-func.js" crossorigin="anonymous"></script>
 	<script src="gdjs-evtsext__gamepads__a_change_vibration_magnitude-func.js" crossorigin="anonymous"></script>
 	<script src="gdjs-evtsext__gamepads__a_set_deadzone-func.js" crossorigin="anonymous"></script>
