--- a/index.html
+++ b/index.html
@@ -164,9 +164,11 @@
 	<script src="gdjs-evtsext__urltools__urlquerystringparameter-func.js" crossorigin="anonymous"></script>
 	<script src="Extensions/DeviceVibration/devicevibrationtools.js" crossorigin="anonymous"></script>
 	<script src="Extensions/Firebase/A_firebasejs/A_firebase-base.js" crossorigin="anonymous"></script>
+	<script src="Extensions/Firebase/A_firebasejs/B_firebase-database.js" crossorigin="anonymous"></script>
 	<script src="Extensions/Firebase/A_firebasejs/B_firebase-firestore.js" crossorigin="anonymous"></script>
 	<script src="Extensions/Firebase/B_firebasetools/C_firebasetools.js" crossorigin="anonymous"></script>
 	<script src="Extensions/Firebase/B_firebasetools/D_cloudfirestoretools.js" crossorigin="anonymous"></script>
+	<script src="Extensions/Firebase/B_firebasetools/D_databasetools.js" crossorigin="anonymous"></script>
 	<script src="Extensions/LinkedObjects/linkedobjects.js" crossorigin="anonymous"></script>
 	<script src="Extensions/PanelSpriteObject/panelspriteruntimeobject-pixi-renderer.js" crossorigin="anonymous"></script>
 	<script src="Extensions/PanelSpriteObject/panelspriteruntimeobject.js" crossorigin="anonymous"></script>
